--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "svelte-kit dev --port 3001",
     "build": "svelte-kit build",
     "package": "svelte-kit package",
-    "preview": "svelte-kit preview",
+    "preview": "svelte-kit preview --port 3002",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "next",
+    "@sveltejs/adapter-static": "^1.0.0-next.28",
     "@sveltejs/kit": "next",
     "@types/three": "^0.137.0",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
@@ -26,12 +27,12 @@
     "svelte": "^3.44.0",
     "svelte-check": "^2.2.6",
     "svelte-preprocess": "^4.9.4",
+    "three": "^0.137.5",
     "tslib": "^2.3.1",
     "typescript": "^4.4.3"
   },
   "type": "module",
   "dependencies": {
-    "@tweenjs/tween.js": "^18.6.4",
     "fast-simplex-noise": "^4.0.0",
     "rxjs": "^7.5.4",
     "three": "^0.137.5"
